# OdiNotes

./: .dockerignore  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: gen-icon.mjs
src/: editor.ts  graph.ts  graphview.ts  main.ts  pane.ts  paths.ts  style.css  vault.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
