[package]
name = "odinotes"
version = "0.1.0"
description = "A lightweight, hyper-efficient Markdown note-taking app."
authors = ["OdiNotes"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS-only: lets us put the title bar in "overlay" mode at runtime so our
# top bar shares the row with the native traffic-light buttons.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Optimise the release binary hard for size + low overhead.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
